# 1.0.5-DiscoBot

./: .gitignore  .gitmodules  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
app/: bot.py
deploy/: Dockerfile  MANIFEST.in  README.md  bentoml-init.sh  bentoml.yml  requirements.txt  setup.py
deploy/ProfanityFilterService/: __init__.py  bentoml.yml  classifier.py  data.py  train.py
deploy/ProfanityFilterService/artifacts/: tokenizer.pkl
src/: bento_service.py  bot.py  classifier.py  config.yml  data.py  helpers.py  packer.py  sentiment-analysis.ipynb  train.py
